--- a/LearnOnTheGo.WP8/MainPage.xaml
+++ b/LearnOnTheGo.WP8/MainPage.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:coding4funConverters="clr-namespace:Coding4Fun.Toolkit.Controls.Converters;assembly=Coding4Fun.Toolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -86,8 +85,8 @@
             </DataTemplate>
         </Grid.Resources>
 
-        <controls:Pivot Title="Enrolled Courses" x:Name="pivot">
-            <controls:PivotItem Header="Active">
+        <phone:Pivot Title="Enrolled Courses" x:Name="pivot">
+            <phone:PivotItem Header="Active">
                 <ScrollViewer>
                     <Grid>
                         <ItemsControl x:Name="activeCourses"
@@ -101,8 +100,8 @@
                                    HorizontalAlignment="Center" />
                     </Grid>
                 </ScrollViewer>
-            </controls:PivotItem>
-            <controls:PivotItem Header="Upcoming">
+            </phone:PivotItem>
+            <phone:PivotItem Header="Upcoming">
                 <ScrollViewer>
                     <Grid>
                         <ItemsControl x:Name="upcomingCourses"
@@ -116,8 +115,8 @@
                                    HorizontalAlignment="Center" />
                     </Grid>
                 </ScrollViewer>
-            </controls:PivotItem>
-            <controls:PivotItem Header="Finished">
+            </phone:PivotItem>
+            <phone:PivotItem Header="Finished">
                 <ScrollViewer>
                     <Grid>
                         <ItemsControl x:Name="finishedCourses"
@@ -131,8 +130,8 @@
                                    HorizontalAlignment="Center" />
                     </Grid>
                 </ScrollViewer>
-            </controls:PivotItem>
-        </controls:Pivot>
+            </phone:PivotItem>
+        </phone:Pivot>
 
         <TextBlock x:Name="messageTextBlock" 
                    Margin="24,0,12,0"
