--- a/Trains.WP8/AboutPage.xaml
+++ b/Trains.WP8/AboutPage.xaml
@@ -1,10 +1,9 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="UKTrains.AboutPage"
+    x:Class="Trains.WP8.AboutPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
@@ -37,14 +36,14 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-    
+
     <Grid Background="Transparent">
         <Image Source="/Assets/Tiles/FlipCycleTileSmall.png" 
                HorizontalAlignment="Right"
                VerticalAlignment="Top"
                Stretch="None" />
-        <controls:Pivot Title="About">
-            <controls:PivotItem Header="UK Trains">
+        <phone:Pivot Title="About">
+            <phone:PivotItem Header="UK Trains">
                 <StackPanel>
                     <TextBlock x:Name="version" 
                                Text="Version 1.x.0.0"
@@ -94,8 +93,8 @@
                                Text="This app is free and done entirely on my own personal time. If you'd like to support this work, please give a small donation." />
                     <Button Content="Donate" Tap="OnDonateClick" />
                 </StackPanel>
-            </controls:PivotItem>
-        </controls:Pivot>       
+            </phone:PivotItem>
+        </phone:Pivot>
     </Grid>
 
 </phone:PhoneApplicationPage>
