--- a/Trains.WP8/LiveProgressPage.xaml
+++ b/Trains.WP8/LiveProgressPage.xaml
@@ -1,15 +1,14 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="UKTrains.StationPage"
+    x:Class="Trains.WP8.LiveProgressPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:coding4funConverters="clr-namespace:Coding4Fun.Toolkit.Controls.Converters;assembly=Coding4Fun.Toolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:src="clr-namespace:UKTrains"
+    xmlns:src="clr-namespace:Trains.WP8"
     xmlns:Trains="clr-namespace:Trains;assembly=Trains"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -49,20 +48,18 @@
             <coding4funConverters:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
             <coding4funConverters:StringToVisibilityConverter x:Key="stringToVisibilityConverter" />
             
-            <src:StatusToColorConverter x:Key="statusToColorConverter"
-                                        Cancelled="Red"
-                                        Delayed="Orange"
-                                        OnTime="{StaticResource PhoneDisabledBrush}" />
-            <src:StatusToColorConverter x:Key="statusToColorConverterUsingAccent" 
-                                        Cancelled="Red"
-                                        Delayed="Orange"
-                                        OnTime="{StaticResource PhoneAccentBrush}" />
-            <src:StatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
-            <src:ArrivalInformationToMessageConverter x:Key="arrivalInformationToMessageConverter" />
+            <src:JourneyElementStatusToColorConverter x:Key="statusToColorConverter" 
+                                                      Cancelled="Red"
+                                                      Delayed="Orange"
+                                                      NoReport="Orange"
+                                                      OnTime="{StaticResource PhoneForegroundBrush}" />
+            <src:JourneyElementStatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
+            <src:HasDepartedToColorConverter x:Key="hasDepartedToColorConverter" 
+                                             Departed="{StaticResource PhoneDisabledBrush}"
+                                             NotDeparted="{StaticResource PhoneForegroundBrush}" />
             
-            
-            <DataTemplate x:Key="departureTemplate">
-                <Button Tap="OnLiveProgressClick">
+            <DataTemplate x:Key="journeyElementTemplate">
+                <Button IsEnabled="False">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid Margin="12,0,0,12">
@@ -76,16 +73,15 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Due}"
+                                <TextBlock Text="{Binding Departs}"
                                            Foreground="{StaticResource PhoneAccentBrush}"
                                            HorizontalAlignment="Right"
                                            Margin="0,12,0,0" />
-                                <TextBlock Text="{Binding Destination}" 
+                                <TextBlock Text="{Binding Station}" 
                                            Grid.Column="2"
                                            FontSize="{StaticResource PhoneFontSizeLarge}"
+                                           Foreground="{Binding Status, Converter={StaticResource hasDepartedToColorConverter}}"
                                            TextWrapping="Wrap" />
                                 <Border Background="{StaticResource PhoneAccentBrush}"
                                         Visibility="{Binding PlatformIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
@@ -99,53 +95,32 @@
                                                FontFamily="{StaticResource PhoneFontFamilyBold}"                                               
                                                HorizontalAlignment="Center"
                                                VerticalAlignment="Center" />
-                                </Border>                                
-                                <TextBlock Text="{Binding DestinationDetail}" 
-                                           Visibility="{Binding DestinationDetail, Converter={StaticResource stringToVisibilityConverter}}"
-                                           Grid.Column="2"
-                                           Grid.Row="1" 
-                                           Foreground="{StaticResource PhoneDisabledBrush}"
-                                           FontSize="{StaticResource PhoneFontSizeSmall}"
-                                           TextWrapping="Wrap" />
+                                </Border>
                                 <TextBlock Text="{Binding Expected.Value}" 
                                            Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
                                            Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}"
                                            FontSize="{StaticResource PhoneFontSizeSmall}"
                                            HorizontalAlignment="Right"
-                                           Grid.Row="2" />
+                                           Grid.Row="1" />
                                 <TextBlock Text="{Binding Status}" 
                                            Grid.Column="2" 
-                                           Grid.Row="2" 
+                                           Grid.Row="1" 
                                            FontSize="{StaticResource PhoneFontSizeSmall}"
                                            Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
                                            Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}" />
-                                <TextBlock Text="{Binding Arrival.Value.Value.Expected}" 
-                                           Visibility="{Binding ArrivalIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
-                                           Foreground="{Binding Arrival.Value.Value.Status, Converter={StaticResource statusToColorConverterUsingAccent}}"
-                                           Grid.Row="3" 
-                                           HorizontalAlignment="Right"
-                                           FontSize="{StaticResource PhoneFontSizeSmall}" />
-                                <TextBlock Text="{Binding Arrival.Value.Value, Converter={StaticResource arrivalInformationToMessageConverter}}"
-                                           Visibility="{Binding ArrivalIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
-                                           Foreground="{Binding Arrival.Value.Value.Status, Converter={StaticResource statusToColorConverter}}"
-                                           TextWrapping="Wrap"
-                                           Grid.Column="2"
-                                           Grid.Row="3"                                            
-                                           FontSize="{StaticResource PhoneFontSizeSmall}" />
                             </Grid>
                         </ControlTemplate>
                     </Button.Template>
-                    
                 </Button>
             </DataTemplate>
         </Grid.Resources>
 
-        <controls:Pivot x:Name="pivot" SelectionChanged="OnPivotSelectionChanged" Title="{Binding StationTitle}">
-            <controls:PivotItem Header="Departures">
+        <phone:Pivot x:Name="pivot">
+            <phone:PivotItem Header="Live Progress">
                 <Grid>
-                    <ItemsControl x:Name="departures"
-                                  ItemsSource="{Binding Departures}"
-                                  ItemTemplate="{StaticResource departureTemplate}">
+                    <ItemsControl x:Name="journeyElements" 
+                                  ItemsSource="{Binding LiveProgress}"
+                                  ItemTemplate="{StaticResource journeyElementTemplate}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel />
@@ -159,58 +134,25 @@
                             </ControlTemplate>
                         </ItemsControl.Template>
                     </ItemsControl>
-                    <TextBlock x:Name="departuresMessageTextBlock" 
+                    <TextBlock x:Name="journeyElementsMessageTextBlock" 
                                TextWrapping="Wrap"
                                Margin="12,12,12,48"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Center" />
-                    <TextBlock x:Name="departuresLastUpdatedTextBlock" 
+                    <TextBlock x:Name="journeyElementsLastUpdatedTextBlock" 
                                Text="{Binding LastUpdated}"
                                Margin="12,-28,0,0"
                                VerticalAlignment="Top"
                                Foreground="{StaticResource PhoneDisabledBrush}"
                                FontSize="{StaticResource PhoneFontSizeSmall}" />
                 </Grid>
-            </controls:PivotItem>
-            <controls:PivotItem Header="Arrivals">
-                <Grid>
-                    <ItemsControl x:Name="arrivals" 
-                                  ItemsSource="{Binding Arrivals}"
-                                  ItemTemplate="{StaticResource departureTemplate}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <VirtualizingStackPanel />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.Template>
-                            <ControlTemplate TargetType="ItemsControl">
-                                <ScrollViewer>
-                                    <ItemsPresenter/>
-                                </ScrollViewer>
-                            </ControlTemplate>
-                        </ItemsControl.Template>
-                    </ItemsControl>
-                    <TextBlock x:Name="arrivalsMessageTextBlock" 
-                               TextWrapping="Wrap"
-                               Margin="12,12,12,48"
-                               VerticalAlignment="Center"
-                               HorizontalAlignment="Center" />
-                    <TextBlock x:Name="arrivalsLastUpdatedTextBlock" 
-                               Text="{Binding LastUpdated}"
-                               Margin="12,-28,0,0"
-                               VerticalAlignment="Top"
-                               Foreground="{StaticResource PhoneDisabledBrush}"
-                               FontSize="{StaticResource PhoneFontSizeSmall}" />
-                </Grid>
-            </controls:PivotItem>
-        </controls:Pivot>
+            </phone:PivotItem>
+        </phone:Pivot>
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar>
             <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick" />
-            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.filter.png" Text="Filter" Click="OnFilterOrClearFilterClick" />
-            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.pin.png" Text="Pin to Start" Click="OnPinToStartClick" x:Name="pinToStart" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
