--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -1,15 +1,14 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="UKTrains.LiveProgressPage"
+    x:Class="Trains.WP8.StationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
-    xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:coding4funConverters="clr-namespace:Coding4Fun.Toolkit.Controls.Converters;assembly=Coding4Fun.Toolkit.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    xmlns:src="clr-namespace:UKTrains"
+    xmlns:src="clr-namespace:Trains.WP8"
     xmlns:Trains="clr-namespace:Trains;assembly=Trains"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -49,18 +48,20 @@
             <coding4funConverters:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
             <coding4funConverters:StringToVisibilityConverter x:Key="stringToVisibilityConverter" />
             
-            <src:JourneyElementStatusToColorConverter x:Key="statusToColorConverter" 
-                                                      Cancelled="Red"
-                                                      Delayed="Orange"
-                                                      NoReport="Orange"
-                                                      OnTime="{StaticResource PhoneForegroundBrush}" />
-            <src:JourneyElementStatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
-            <src:HasDepartedToColorConverter x:Key="hasDepartedToColorConverter" 
-                                             Departed="{StaticResource PhoneDisabledBrush}"
-                                             NotDeparted="{StaticResource PhoneForegroundBrush}" />
+            <src:StatusToColorConverter x:Key="statusToColorConverter"
+                                        Cancelled="Red"
+                                        Delayed="Orange"
+                                        OnTime="{StaticResource PhoneDisabledBrush}" />
+            <src:StatusToColorConverter x:Key="statusToColorConverterUsingAccent" 
+                                        Cancelled="Red"
+                                        Delayed="Orange"
+                                        OnTime="{StaticResource PhoneAccentBrush}" />
+            <src:StatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
+            <src:ArrivalInformationToMessageConverter x:Key="arrivalInformationToMessageConverter" />
             
-            <DataTemplate x:Key="journeyElementTemplate">
-                <Button IsEnabled="False">
+            
+            <DataTemplate x:Key="departureTemplate">
+                <Button Tap="OnLiveProgressClick">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid Margin="12,0,0,12">
@@ -74,15 +75,16 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Departs}"
+                                <TextBlock Text="{Binding Due}"
                                            Foreground="{StaticResource PhoneAccentBrush}"
                                            HorizontalAlignment="Right"
                                            Margin="0,12,0,0" />
-                                <TextBlock Text="{Binding Station}" 
+                                <TextBlock Text="{Binding Destination}" 
                                            Grid.Column="2"
                                            FontSize="{StaticResource PhoneFontSizeLarge}"
-                                           Foreground="{Binding Status, Converter={StaticResource hasDepartedToColorConverter}}"
                                            TextWrapping="Wrap" />
                                 <Border Background="{StaticResource PhoneAccentBrush}"
                                         Visibility="{Binding PlatformIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
@@ -96,32 +98,53 @@
                                                FontFamily="{StaticResource PhoneFontFamilyBold}"                                               
                                                HorizontalAlignment="Center"
                                                VerticalAlignment="Center" />
-                                </Border>
+                                </Border>                                
+                                <TextBlock Text="{Binding DestinationDetail}" 
+                                           Visibility="{Binding DestinationDetail, Converter={StaticResource stringToVisibilityConverter}}"
+                                           Grid.Column="2"
+                                           Grid.Row="1" 
+                                           Foreground="{StaticResource PhoneDisabledBrush}"
+                                           FontSize="{StaticResource PhoneFontSizeSmall}"
+                                           TextWrapping="Wrap" />
                                 <TextBlock Text="{Binding Expected.Value}" 
                                            Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
                                            Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}"
                                            FontSize="{StaticResource PhoneFontSizeSmall}"
                                            HorizontalAlignment="Right"
-                                           Grid.Row="1" />
+                                           Grid.Row="2" />
                                 <TextBlock Text="{Binding Status}" 
                                            Grid.Column="2" 
-                                           Grid.Row="1" 
+                                           Grid.Row="2" 
                                            FontSize="{StaticResource PhoneFontSizeSmall}"
                                            Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
                                            Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}" />
+                                <TextBlock Text="{Binding Arrival.Value.Value.Expected}" 
+                                           Visibility="{Binding ArrivalIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
+                                           Foreground="{Binding Arrival.Value.Value.Status, Converter={StaticResource statusToColorConverterUsingAccent}}"
+                                           Grid.Row="3" 
+                                           HorizontalAlignment="Right"
+                                           FontSize="{StaticResource PhoneFontSizeSmall}" />
+                                <TextBlock Text="{Binding Arrival.Value.Value, Converter={StaticResource arrivalInformationToMessageConverter}}"
+                                           Visibility="{Binding ArrivalIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
+                                           Foreground="{Binding Arrival.Value.Value.Status, Converter={StaticResource statusToColorConverter}}"
+                                           TextWrapping="Wrap"
+                                           Grid.Column="2"
+                                           Grid.Row="3"                                            
+                                           FontSize="{StaticResource PhoneFontSizeSmall}" />
                             </Grid>
                         </ControlTemplate>
                     </Button.Template>
+                    
                 </Button>
             </DataTemplate>
         </Grid.Resources>
 
-        <controls:Pivot x:Name="pivot">
-            <controls:PivotItem Header="Live Progress">
+        <phone:Pivot x:Name="pivot" SelectionChanged="OnPivotSelectionChanged" Title="{Binding StationTitle}">
+            <phone:PivotItem Header="Departures">
                 <Grid>
-                    <ItemsControl x:Name="journeyElements" 
-                                  ItemsSource="{Binding LiveProgress}"
-                                  ItemTemplate="{StaticResource journeyElementTemplate}">
+                    <ItemsControl x:Name="departures"
+                                  ItemsSource="{Binding Departures}"
+                                  ItemTemplate="{StaticResource departureTemplate}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel />
@@ -135,25 +158,58 @@
                             </ControlTemplate>
                         </ItemsControl.Template>
                     </ItemsControl>
-                    <TextBlock x:Name="journeyElementsMessageTextBlock" 
+                    <TextBlock x:Name="departuresMessageTextBlock" 
                                TextWrapping="Wrap"
                                Margin="12,12,12,48"
                                VerticalAlignment="Center"
                                HorizontalAlignment="Center" />
-                    <TextBlock x:Name="journeyElementsLastUpdatedTextBlock" 
+                    <TextBlock x:Name="departuresLastUpdatedTextBlock" 
                                Text="{Binding LastUpdated}"
                                Margin="12,-28,0,0"
                                VerticalAlignment="Top"
                                Foreground="{StaticResource PhoneDisabledBrush}"
                                FontSize="{StaticResource PhoneFontSizeSmall}" />
                 </Grid>
-            </controls:PivotItem>
-        </controls:Pivot>
+            </phone:PivotItem>
+            <phone:PivotItem Header="Arrivals">
+                <Grid>
+                    <ItemsControl x:Name="arrivals" 
+                                  ItemsSource="{Binding Arrivals}"
+                                  ItemTemplate="{StaticResource departureTemplate}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.Template>
+                            <ControlTemplate TargetType="ItemsControl">
+                                <ScrollViewer>
+                                    <ItemsPresenter/>
+                                </ScrollViewer>
+                            </ControlTemplate>
+                        </ItemsControl.Template>
+                    </ItemsControl>
+                    <TextBlock x:Name="arrivalsMessageTextBlock" 
+                               TextWrapping="Wrap"
+                               Margin="12,12,12,48"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Center" />
+                    <TextBlock x:Name="arrivalsLastUpdatedTextBlock" 
+                               Text="{Binding LastUpdated}"
+                               Margin="12,-28,0,0"
+                               VerticalAlignment="Top"
+                               Foreground="{StaticResource PhoneDisabledBrush}"
+                               FontSize="{StaticResource PhoneFontSizeSmall}" />
+                </Grid>
+            </phone:PivotItem>
+        </phone:Pivot>
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar>
             <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick" />
+            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.filter.png" Text="Filter" Click="OnFilterOrClearFilterClick" />
+            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.pin.png" Text="Pin to Start" Click="OnPinToStartClick" x:Name="pinToStart" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
