--- a/LearnOnTheGo.WP8/SettingsPage.xaml
+++ b/LearnOnTheGo.WP8/SettingsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="LearnOnTheGo.SettingsPage"
+    x:Class="LearnOnTheGo.WP8.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
