--- a/Trains.WP8.IE/App.xaml
+++ b/Trains.WP8.IE/App.xaml
@@ -1,5 +1,5 @@
 ﻿<Application
-    x:Class="UKTrains.WP8.App"
+    x:Class="Trains.WP8.IE.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
