--- a/Trains.WP8/AboutPage.xaml
+++ b/Trains.WP8/AboutPage.xaml
@@ -7,13 +7,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:trains="clr-namespace:Trains;assembly=Trains"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-    toolkit:TiltEffect.IsTiltEnabled="True">
+    toolkit:TiltEffect.IsTiltEnabled="True"
+    d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=trains:SampleData}">
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
@@ -43,7 +45,7 @@
                VerticalAlignment="Top"
                Stretch="None" />
         <phone:Pivot Title="About">
-            <phone:PivotItem Header="UK Trains">
+            <phone:PivotItem x:Name="pivotItem" Header="{Binding AppTitle}">
                 <StackPanel>
                     <TextBlock x:Name="version" 
                                Text="Version 1.x.0.0"
@@ -65,10 +67,13 @@
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Tell your friends about the UK Trains app"
-                                   TextAlignment="Right"
+                        <TextBlock TextAlignment="Right"
                                    TextWrapping="Wrap"
-                                   Margin="12"/>
+                                   Margin="12">
+                            Tell your friends about the 
+                            <Run Text="{Binding AppTitle}" x:Name="run" />
+                             app
+                        </TextBlock>
                         <Button Click="OnShareBySMSClick"
                                 Padding="0"
                                 Grid.Column="1">
