--- a/Trains.WP8/SettingsPage.xaml
+++ b/Trains.WP8/SettingsPage.xaml
@@ -7,13 +7,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:trains="clr-namespace:Trains;assembly=Trains"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-    toolkit:TiltEffect.IsTiltEnabled="True">
+    toolkit:TiltEffect.IsTiltEnabled="True"
+    d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=trains:SampleData}">
     
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
@@ -38,7 +40,7 @@
     </toolkit:TransitionService.NavigationOutTransition>
     
     <Grid Background="Transparent">
-        <phone:Pivot Title="UK Trains">
+        <phone:Pivot x:Name="pivot" Title="{Binding AppTitle}">
             <phone:PivotItem Header="Settings">
                 <StackPanel>
                     <toolkit:ToggleSwitch Content="Enable Location"
