--- a/Common.WP8/AboutPage.xaml
+++ b/Common.WP8/AboutPage.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="LearnOnTheGo.WP8.AboutPage"
+    x:Class="Common.WP8.AboutPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -7,13 +7,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:common="clr-namespace:Common;assembly=Common"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-    toolkit:TiltEffect.IsTiltEnabled="True">
+    toolkit:TiltEffect.IsTiltEnabled="True"
+    d:DataContext="{d:DesignInstance IsDesignTimeCreatable=True, Type=common:SampleData}">
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
@@ -36,8 +38,13 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-    
+
     <Grid Background="Transparent">
+        <Image x:Name="bigImage"
+               Source="/Assets/Tiles/FlipCycleTileSmall.png" 
+               HorizontalAlignment="Right"
+               VerticalAlignment="Top"
+               Stretch="None" />
         <phone:Pivot Title="About">
             <phone:PivotItem>
                 <phone:PivotItem.Header>
@@ -46,9 +53,10 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Learn On The Go" 
-                                   FontSize="50" />
-                        <Image Source="/Assets/Tiles/IconicTileSmall.png"                               
+                        <TextBlock x:Name="headerTextBlock" 
+                                   Text="{Binding AppTitle}" />
+                        <Image x:Name="smallImage"
+                               Source="/Assets/Tiles/IconicTileSmall.png"
                                Margin="0,-16"
                                Grid.Column="1" />
                     </Grid>
@@ -74,10 +82,11 @@
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Tell your friends about Learn On The Go"
+                        <TextBlock Text="{Binding AppTitle}"
+                                   x:Name="tellYourFriendsTextBlock"
                                    TextAlignment="Right"
                                    TextWrapping="Wrap"
-                                   Margin="12"/>
+                                   Margin="12" />
                         <Button Click="OnShareBySMSClick"
                                 Padding="0"
                                 Grid.Column="1">
@@ -103,7 +112,7 @@
                     <Button Content="Donate" Tap="OnDonateClick" />
                 </StackPanel>
             </phone:PivotItem>
-        </phone:Pivot>       
+        </phone:Pivot>
     </Grid>
 
 </phone:PhoneApplicationPage>
