Add AdDuplexId to AppMetadata

--- a/LearnOnTheGo.WP8/MainPage.xaml
+++ b/LearnOnTheGo.WP8/MainPage.xaml
@@ -140,7 +140,7 @@
                    HorizontalAlignment="Center" />
 
         <Grid Grid.Row="1" Margin="0,0,0,-1">
-            <adduplex:AdControl AppId="57903">
+            <adduplex:AdControl x:Name="adControl">
                 <adduplex:AdControl.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform ScaleX="1.005" />
