--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -47,7 +47,7 @@
 
             <coding4funConverters:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter" />
             <coding4funConverters:StringToVisibilityConverter x:Key="stringToVisibilityConverter" />
-            
+
             <src:StatusToColorConverter x:Key="statusToColorConverter"
                                         Cancelled="Red"
                                         Delayed="Orange"
@@ -58,10 +58,9 @@
                                         OnTime="{StaticResource PhoneAccentBrush}" />
             <src:StatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
             <src:ArrivalInformationToMessageConverter x:Key="arrivalInformationToMessageConverter" />
-            
-            
+
             <DataTemplate x:Key="departureTemplate">
-                <Button Tap="OnLiveProgressClick">
+                <Button Tap="OnLiveProgressFromDeparturesClick">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid Margin="12,0,0,12">
@@ -89,7 +88,7 @@
                                 <Border Background="{StaticResource PhoneAccentBrush}"
                                         Visibility="{Binding PlatformIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
                                         Grid.Column="4" 
-                                        Grid.RowSpan="3"
+                                        Grid.RowSpan="4"
                                         Margin="0,4,0,0"
                                         VerticalAlignment="Top"
                                         Width="42"
@@ -98,7 +97,7 @@
                                                FontFamily="{StaticResource PhoneFontFamilyBold}"                                               
                                                HorizontalAlignment="Center"
                                                VerticalAlignment="Center" />
-                                </Border>                                
+                                </Border>
                                 <TextBlock Text="{Binding DestinationDetail}" 
                                            Visibility="{Binding DestinationDetail, Converter={StaticResource stringToVisibilityConverter}}"
                                            Grid.Column="2"
@@ -134,12 +133,67 @@
                             </Grid>
                         </ControlTemplate>
                     </Button.Template>
-                    
                 </Button>
             </DataTemplate>
-        </Grid.Resources>
 
-        <phone:Pivot x:Name="pivot" SelectionChanged="OnPivotSelectionChanged" Title="{Binding StationTitle}">
+            <DataTemplate x:Key="arrivalTemplate">
+                <Button Tap="OnLiveProgressFromArrivalsClick">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Grid Margin="12,0,0,12">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="56" />
+                                    <ColumnDefinition Width="12" />
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="12" />
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Due}"
+                                           Foreground="{StaticResource PhoneAccentBrush}"
+                                           HorizontalAlignment="Right"
+                                           Margin="0,12,0,0" />
+                                <TextBlock Text="{Binding Origin}" 
+                                           Grid.Column="2"
+                                           FontSize="{StaticResource PhoneFontSizeLarge}"
+                                           TextWrapping="Wrap" />
+                                <Border Background="{StaticResource PhoneAccentBrush}"
+                                        Visibility="{Binding PlatformIsKnown, Converter={StaticResource booleanToVisibilityConverter}}"
+                                        Grid.Column="4" 
+                                        Grid.RowSpan="1"
+                                        Margin="0,4,0,0"
+                                        VerticalAlignment="Top"
+                                        Width="42"
+                                        Height="42">
+                                    <TextBlock Text="{Binding Platform.Value}" 
+                                               FontFamily="{StaticResource PhoneFontFamilyBold}"                                               
+                                               HorizontalAlignment="Center"
+                                               VerticalAlignment="Center" />
+                                </Border>
+                                <TextBlock Text="{Binding Expected.Value}" 
+                                           Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
+                                           Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}"
+                                           FontSize="{StaticResource PhoneFontSizeSmall}"
+                                           HorizontalAlignment="Right"
+                                           Grid.Row="1" />
+                                <TextBlock Text="{Binding Status}" 
+                                           Grid.Column="2" 
+                                           Grid.Row="1" 
+                                           FontSize="{StaticResource PhoneFontSizeSmall}"
+                                           Visibility="{Binding Status, Converter={StaticResource statusToVisibilityConverter}}"
+                                           Foreground="{Binding Status, Converter={StaticResource statusToColorConverter}}" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </DataTemplate>
+
+        </Grid.Resources>
+        
+        <phone:Pivot x:Name="pivot" Title="{Binding StationTitle}">
             <phone:PivotItem Header="Departures">
                 <Grid>
                     <ItemsControl x:Name="departures"
@@ -175,7 +229,7 @@
                 <Grid>
                     <ItemsControl x:Name="arrivals" 
                                   ItemsSource="{Binding Arrivals}"
-                                  ItemTemplate="{StaticResource departureTemplate}">
+                                  ItemTemplate="{StaticResource arrivalTemplate}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <VirtualizingStackPanel />
