[UK Trains] Support for trains delayed indefinitely

--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -50,10 +50,12 @@
 
             <src:StatusToColorConverter x:Key="statusToColorConverter"
                                         Cancelled="Red"
+                                        DelayedIndefinitely="Red"
                                         Delayed="Orange"
                                         OnTime="{StaticResource PhoneDisabledBrush}" />
             <src:StatusToColorConverter x:Key="statusToColorConverterUsingAccent" 
                                         Cancelled="Red"
+                                        DelayedIndefinitely="Red"
                                         Delayed="Orange"
                                         OnTime="{StaticResource PhoneAccentBrush}" />
             <src:StatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
