Correctly display trains with no report information
Fixed time display of delayed trains near midnight
Fix Brighton vs Brigthon (East Sussex) matching

--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -52,11 +52,13 @@
                                         Cancelled="Red"
                                         DelayedIndefinitely="Red"
                                         Delayed="Orange"
+                                        NoReport="Orange"
                                         OnTime="{StaticResource PhoneDisabledBrush}" />
             <src:StatusToColorConverter x:Key="statusToColorConverterUsingAccent" 
                                         Cancelled="Red"
                                         DelayedIndefinitely="Red"
                                         Delayed="Orange"
+                                        NoReport="Orange"
                                         OnTime="{StaticResource PhoneAccentBrush}" />
             <src:StatusToVisibilityConverter x:Key="statusToVisibilityConverter" />
             <src:ArrivalInformationToMessageConverter x:Key="arrivalInformationToMessageConverter" />
