--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -265,9 +265,9 @@
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar>
-            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick" />
-            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.filter.png" Text="Filter" Click="OnFilterOrClearFilterClick" />
-            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/appbar.pin.png" Text="Pin to Start" Click="OnPinToStartClick" x:Name="pinToStart" />
+            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick" />
+            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.filter.png" Text="Filter" Click="OnFilterOrClearFilterClick" />
+            <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.pin.png" Text="Pin to Start" Click="OnPinToStartClick" x:Name="pinToStart" />
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
 
