--- a/LearnOnTheGo.WP8/MainPage.xaml
+++ b/LearnOnTheGo.WP8/MainPage.xaml
@@ -9,7 +9,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:lotg="clr-namespace:LearnOnTheGo;assembly=LearnOnTheGo"
-    xmlns:adduplex="clr-namespace:AdDuplex;assembly=AdDuplex.WindowsPhone"
     mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="696"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
@@ -42,11 +41,6 @@
     </toolkit:TransitionService.NavigationOutTransition>
 
     <Grid Background="Transparent">
-
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
 
         <Grid.Resources>
 
@@ -139,23 +133,10 @@
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center" />
 
-        <Grid Grid.Row="1" Margin="0,0,0,-1">
-            <adduplex:AdControl x:Name="adControl">
-                <adduplex:AdControl.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform ScaleX="1.005" />
-                        <TranslateTransform X="-1" />
-                    </TransformGroup>
-                </adduplex:AdControl.RenderTransform>
-            </adduplex:AdControl>
-            <Border BorderThickness="0,1,0,0"
-                    BorderBrush="{StaticResource PhoneBackgroundBrush}" />
-        </Grid>
-
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar>
+        <shell:ApplicationBar Opacity="0.9">
             <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick"/>
         </shell:ApplicationBar>
     </phone:PhoneApplicationPage.ApplicationBar>
