--- a/Trains.WP8/StationPage.xaml
+++ b/Trains.WP8/StationPage.xaml
@@ -264,7 +264,7 @@
     </Grid>
 
     <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar>
+        <shell:ApplicationBar Opacity="0.9">
             <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.refresh.png" Text="Refresh" Click="OnRefreshClick" />
             <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.filter.png" Text="Filter" Click="OnFilterOrClearFilterClick" />
             <shell:ApplicationBarIconButton IconUri="/Assets/Icons/dark/appbar.pin.png" Text="Pin to Start" Click="OnPinToStartClick" x:Name="pinToStart" />
